Fixed alignment of headers

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -162,7 +162,7 @@ li {
 #datewrap {
 
     color: #c00;
-    margin: -1.72em 0 0.695em 0;
+    margin: -1.7em 0 0.695em 0;
     font-style: italic;
 
 }
